# index-3d

./: .clang-format  .gitignore  ANALYSIS.md  Pipfile  README.md  analysis.py  avg.py  axis-tree-2.py  axis-tree.py  buffer-generator.py  gen-index.py  make-index.py  pyproject.toml  raytracer.py  setup.py  sphere-index.py  tree-wavefront-to-numpy-vertices.py  wavefront-reader.py
src/bbox-index/: a.py  lib.py  magnet.py  main.py  node.py
src/bin-tree/: CMakeLists.txt  main.cpp
src/dragiyski/i3d/: wavefront.py
src/floatlist/: main.cxx
